# PyForge

./: CHANGELOG.md  CLAUDE.md  README.md  dupe.py  emit.py  glue.py  match.py  num.py  order.py  peek.py  pyc.py  pycat.py  pyhead.py  pyline.py  pyniq.py  pyproject.toml  pysort.py  pyspl.py  pytail.py  pytype.py  pywalk.py  scan.py  seek.py  show.py  slice.py  subs.py  tally.py  term-colors.py  track.py  when.py  where.py
cli/: __init__.py  ansi.py  cli_program.py  constants.py  file_reader.py  ini.py  io.py  pattern_finder.py  patterns.py  terminal.py  text.py  text_program.py  types.py
docs/: CodeEvaluationRubric-DesignGuidelines.docx  code_evaluation_rubric.md  help_text_rubric.md
pyforge/: __about__.py  __init__.py
pyforge/cli/: cli_program.py
pyforge/commands/: __init__.py  dupe.py  emit.py  glue.py  num.py  order.py  peek.py  scan.py  seek.py  show.py  slice.py  subs.py  tally.py  track.py  when.py  where.py
pyrcli/: __about__.py  __init__.py
pyrcli/cli/: __init__.py  ansi.py  cli_program.py  env.py  ini.py  io.py  (+8 more)
scripts/: bootstrap-user.sh  bootstrap-venv.sh  bootstrap.bat  bootstrap.sh  delpoy.sh  deploy.sh  dev-setup.bat  files.sh  glue.sh  page.bat  page.sh  setup.bat  setup.sh  subs.bat  subs.sh  when.bat  when.sh
test/: __init__.py  ansi_test.py  ini-test-invalid.ini  ini_test.ini  ini_test.py  io_test.py  patterns_test.py  run-tests.bat  run-tests.sh  terminal_test.py
tests/: __init__.py  run-tests.bat  run-tests.sh  test_ansi.py  test_ini.py  test_io.py  test_patterns.py  test_progress.py  test_render.py  test_terminal.py  test_text.py
(+30 files in other folders)
