[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyr-cli"
version = "1.0.0"
description = "A CLI toolkit of small, composable programs designed for deterministic pipelines."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Roth Earl" }]
keywords = ["cli", "coreutils", "toolkit", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
    "colorama",
    "python-dateutil",
    "requests",
]

[project.scripts]
dupe = "pyrcli.commands.dupe:main"
emit = "pyrcli.commands.emit:main"
glue = "pyrcli.commands.glue:main"
num = "pyrcli.commands.num:main"
order = "pyrcli.commands.order:main"
peek = "pyrcli.commands.peek:main"
scan = "pyrcli.commands.scan:main"
seek = "pyrcli.commands.seek:main"
show = "pyrcli.commands.show:main"
slice = "pyrcli.commands.slice:main"
subs = "pyrcli.commands.subs:main"
tally = "pyrcli.commands.tally:main"
track = "pyrcli.commands.track:main"
when = "pyrcli.commands.when:main"
where = "pyrcli.commands.where:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrcli*"]
